--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "firebase": "^12.6.0",
     "framer-motion": "^12.23.25",
     "jose": "^6.1.3",
     "jsonwebtoken": "^9.0.2",
